# EclipseGames

./: .env  .gitignore  Cargo.toml  config-overrides.js  package-lock.json  package.json
public/: index.html
src/: App.css  App.tsx  IDL.json  config.ts  index.css  index.tsx  types.ts  webpack.config.js
src/components/: App.tsx  AppContent.tsx  CustomWalletButton.tsx  EclipseConnection.jsx  GameSelector.css  GameSelector.tsx  HomePage.css  HomePage.module.css  HomePage.tsx  Tetris.css  Tetris.tsx  TicTacToe.css  TicTacToe.tsx  WalletConnection.tsx  global.d.ts  idl.json  index.js  initializeGame.ts  package.json  tetris.json
src/styles/: GameSelector.css  Tetris.css  TicTacToe.css
src/types/: backpack.d.ts
src/utils/: blockchain.ts  paymentUtils.ts  walletDetector.ts
tic_tac_toe_contract/: Anchor.toml  Cargo.toml
tic_tac_toe_contract/programs/tic_tac_toe_contract/: Cargo.toml
tic_tac_toe_contract/programs/tic_tac_toe_contract/src/: lib.rs
tic_tac_toe_contract/tests/: tic_tac_toe_contract.ts
